[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/fonts/titlescreenfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/Menu/HowTo.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Menu/fake_background.png" type="Texture" id=4]
[ext_resource path="res://UI/Menu/Credits.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/styles/button_flatbox.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.415686 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.94902, 0.403922, 0.00784314, 1 )
corner_radius_top_left = 20
corner_radius_bottom_right = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.415686 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.94902, 0.403922, 0.00784314, 1 )
corner_radius_top_left = 20
corner_radius_bottom_right = 20

[sub_resource type="Theme" id=2]
Button/colors/font_color = Color( 0.94902, 0.403922, 0.00784314, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94902, 0.403922, 0.00784314, 1 )
Button/colors/font_color_pressed = Color( 0.698039, 0.301961, 0.0117647, 1 )
Button/constants/hseparation = 2
Button/fonts/font = ExtResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = ExtResource( 6 )
Button/styles/pressed = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 950.0
margin_top = 75.0
margin_right = -75.0
margin_bottom = -75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
margin_right = 255.0
margin_bottom = 630.0
custom_constants/separation = 25
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MarginContainer/Buttons"]
margin_top = 307.0
margin_right = 255.0
margin_bottom = 369.0
custom_fonts/font = ExtResource( 1 )
text = "{Start}"

[node name="HowTo" type="Button" parent="MarginContainer/Buttons"]
margin_top = 394.0
margin_right = 255.0
margin_bottom = 456.0
custom_fonts/font = ExtResource( 1 )
text = "{how to}"

[node name="Credits" type="Button" parent="MarginContainer/Buttons"]
margin_top = 481.0
margin_right = 255.0
margin_bottom = 543.0
custom_fonts/font = ExtResource( 1 )
text = "{Credits}"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/Buttons"]
margin_top = 568.0
margin_right = 255.0
margin_bottom = 630.0
custom_fonts/font = ExtResource( 1 )
text = "{Quit}"

[node name="HowTo" parent="." instance=ExtResource( 3 )]

[node name="Credits" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="MarginContainer/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MarginContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
